<resources>
    <string name="app_name">Dekont</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="message_registration_successful">Account created! Signing you in…</string>

    <string name="error_missing_internet_connection">No internet connection</string>
    <string name="error_network">A network error has occurred.</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_server_unreachable">Unable to reach server.</string>
    <string name="error_internal_server_error">An internal server error has occurred.</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_sign_in_failed">Failed to sign in with the given credentials</string>
    <string name="error_field_required">This field is required</string>

    <string name="dialog_message_login_redirect">You are not logged in. Would you like to be redirected to the login screen?</string>
    <string name="dialog_positive_login_redirect">Yes</string>
    <string name="dialog_negative_login_redirect">No</string>
    <string name="dialog_message_confirm_transaction_deletion">Delete this transaction?</string>

    <!-- Strings related to transaction list -->
    <string name="message_transaction_deletion_success">The transaction has been deleted.</string>

    <!-- Strings related to transaction editor -->
    <string name="hint_date">Date</string>
    <string name="hint_category">Category</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_currency">Currency</string>
    <string name="hint_description">Description</string>
    <string name="hint_supplier">Supplier</string>
    <string name="hint_document_type">Document type</string>
    <string name="hint_document_number">Document number</string>

    <!-- Groups -->
    <string name="hint_invite_code">Invite code</string>

    <!-- TransactionDetail -->
    <string name="message_description_unavailable"><i>No description provided.</i></string>

    <!-- Common action names -->
    <string name="action_save">Save</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Sign up</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_collapse_expand">Collapse/Expand</string>
    <string name="action_join">Join</string>
    <string name="action_leave_group">Leave group</string>
    <string name="action_retry">Retry</string>
    <string name="action_join_group">Join a group</string>
    <string name="action_create_group">Create a group</string>
    <string name="dialog_message_confirm_logout">Are you sure you want to sign out?</string>

    <string-array name="transaction_options">
        <item>@string/action_delete</item>
    </string-array>

    <string name="label_supplier">Supplier</string>
    <string name="label_document_type">Document type</string>
    <string name="label_document_number">Document number</string>

    <!-- Resource error prefixes -->
    <string name="general_error_prefix">Error: %s</string>
    <string name="error_loading_transactions_prefix">Error loading transactions: %s</string>
    <string name="error_loading_categories_prefix">Error loading categories: %s</string>
    <string name="login_registration_forms_separator_text">or</string>

    <string name="nav_item_group">Group</string>

    <!-- Activity and fragment labels -->
    <string name="title_activity_transactions">Transactions</string>
    <string name="label_fragment_transaction_list">Transactions</string>
    <string name="label_fragment_transaction_editor">Transaction Editor</string>
    <string name="label_fragment_transaction_detail">Details</string>
    <string name="label_fragment_group_settings">Group Settings</string>
    <string name="label_activity_auth">Authentication</string>
</resources>
