<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/transactionListFragment">

    <fragment
        android:id="@+id/transactionListFragment"
        android:name="ro.ande.dekont.ui.TransactionListFragment"
        android:label="@string/label_fragment_transaction_list"
        tools:layout="@layout/fragment_transaction_list" >
        <action
            android:id="@+id/action_transactionListFragment_to_transactionEditorFragment"
            app:destination="@id/transactionEditorFragment"
            app:enterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_transactionListFragment_to_transactionDetailFragment"
            app:destination="@id/transactionDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_transactionListFragment_to_authActivity"
            app:destination="@id/authActivity" />
        <action
            android:id="@+id/action_transactionListFragment_to_groupSettingsFragment"
            app:destination="@id/groupSettingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/transactionEditorFragment"
        android:name="ro.ande.dekont.ui.TransactionEditorFragment"
        android:label="@string/label_fragment_transaction_editor"
        tools:layout="@layout/fragment_transaction_editor" >
        <argument
            android:name="editorAction"
            app:argType="ro.ande.dekont.ui.TransactionEditorFragment$Action" />
    </fragment>
    <fragment
        android:id="@+id/transactionDetailFragment"
        android:name="ro.ande.dekont.ui.TransactionDetailFragment"
        android:label="@string/label_fragment_transaction_detail"
        tools:layout="@layout/fragment_transaction_detail" >
        <argument android:name="transactionId"
            app:argType="integer" />
    </fragment>
    <activity
        android:id="@+id/authActivity"
        android:name="ro.ande.dekont.ui.AuthActivity"
        android:label="@string/label_activity_auth"
        tools:layout="@layout/activity_login" />
    <fragment
        android:id="@+id/groupSettingsFragment"
        android:name="ro.ande.dekont.ui.GroupSettingsFragment"
        android:label="@string/label_fragment_group_settings" />
</navigation>